--- a/public/views/Room.html
+++ b/public/views/Room.html
@@ -194,12 +194,12 @@ document.querySelector('form').addEventListener('submit', (event) => {
 
                 
 
-                <button id="initSubmitButton" type="submit" class="init-common">Create Feat</button>
+                <button id="initSubmitButton" type="submit" class="init-common">Create Your Sphere</button>
             </form>
 
             <span class="init-limit-text">Up to 10 members. No time limit</span>
             <span class="init-terms-text"
-                >By starting to use the Featly service, you agree to the <a href="#">Terms of Use</a></span
+                >By starting to use the chatspheres service, you agree to the <a href="#">Terms of Use</a></span
             >
         </div>
 
