--- a/public/css/Room.css
+++ b/public/css/Room.css
@@ -252,7 +252,7 @@ a {
     height: 56px;
     width: 100%;
     padding: 13px 18px;
-    background: linear-gradient(105.88deg, #4f22c8 0%, #8c6be6 100%, #8c6be6 100%), #2e2e36;
+    background: #00BFFF
     font-weight: 700;
     font-size: 16px;
     line-height: 24px;
