--- a/public/css/Room.css
+++ b/public/css/Room.css
@@ -252,7 +252,7 @@ a {
     height: 56px;
     width: 100%;
     padding: 13px 18px;
-    background: #00BFFF;
+    background: #FF6F61;
     font-weight: 700;
     font-size: 16px;
     line-height: 24px;
