--- a/public/css/Room.css
+++ b/public/css/Room.css
@@ -38,7 +38,7 @@ html[data-theme='dark'] {
 :root {
     --body-bg: #8A9597;
     --control-bg: #0d0e10;
-    --main-color: #8c6be6;
+    --main-color: #FF6F61;
     --error-color: #e63b2a;
     --secondary-bg: #1d1d24;
 
