--- a/public/views/landing.html
+++ b/public/views/landing.html
@@ -115,8 +115,8 @@
                     </div>
                 </section>
                 <section class="hero-term-info">
-                    <p>By starting to use the Featly service, you agree to the <a href="/terms">Terms of Use</a></p>
-                    <span>© 2023 Featly Inc., all rights reserved</span>
+                    <p>By starting to use the chatspheres service, you agree to the <a href="/terms">Terms of Use</a></p>
+                    <span>© 2023 chatspheres Inc., all rights reserved</span>
                 </section>
             </main>
         </div>
