--- a/public/views/Room.html
+++ b/public/views/Room.html
@@ -252,6 +252,8 @@ document.querySelector('form').addEventListener('submit', (event) => {
         <div id="invitePopup" class="invite-popup hidden">
             <div class="popup-title">
                 <h2>Invite to a meeting</h2>
+                <p>Other users can now view your meeting here <a href="https://chatspheres.com/views/joinurspheres.html" target="_blank">https://chatspheres.com/views/joinurspheres.html</a></p>
+
                 <div id="closeInvitePopup" class="close-icon" onclick="hide(invitePopup)">
                     <img src="../images/icons/close_icon.svg" alt="close" />
                 </div>
