--- a/public/views/landing.html
+++ b/public/views/landing.html
@@ -20,8 +20,8 @@
         <!-- Title and Icon -->
 
         <title>FeatlyTalk, Free Video Calls, Messaging and Screen Sharing</title>
-<link rel="shortcut icon" href="../images/imageedit_11_9100596704.png" />
-        <link rel="apple-touch-icon" href="../images/imageedit_11_9100596704.png" />
+<link rel="shortcut icon" href="../images/Favicon-01.ico" />
+        <link rel="apple-touch-icon" href="../images/Favicon-01.ico" />
 
         <!-- Meta Information -->
 
