--- a/public/views/Room.html
+++ b/public/views/Room.html
@@ -19,8 +19,8 @@
         <!-- Title and Icon -->
 
         <title>42.</title>
-        <link rel="shortcut icon" href="../images/imageedit_1_8423484387.png" />
-        <link rel="apple-touch-icon" href="../images/imageedit_1_8423484387.png" />
+        <link rel="shortcut icon" href="../images/Favicon-01.ico" />
+        <link rel="apple-touch-icon" href="../images/Favicon-01.ico" />
 
         <!-- Meta Information -->
 
