--- a/public/views/newroom.html
+++ b/public/views/newroom.html
@@ -17,8 +17,8 @@
         <!-- Title and Icon -->
 
         <title>FeatlyTalk SFU - Create your Room name and start the new call.</title>
-        <link rel="shortcut icon" href="../images/logo.jpg" />
-        <link rel="apple-touch-icon" href="../images/logo.jpg" />
+        <link rel="shortcut icon" href="../images/Favicon-01.ico" />
+        <link rel="apple-touch-icon" href="../images/Favicon-01.ico" />
 
         <!-- Meta Information -->
 
