--- a/public/views/terms.html
+++ b/public/views/terms.html
@@ -19,9 +19,9 @@
 
         <!-- Title and Icon -->
 
-        <title>FeatlyTalk SFU - Terms of Use.</title>
-        <link rel="shortcut icon" href="../images/logo.jpg" />
-        <link rel="apple-touch-icon" href="../images/logo.jpg" />
+        <title>chatspheres - Terms of Use.</title>
+        <link rel="shortcut icon" href="../images/Favicon-01.ico" />
+        <link rel="apple-touch-icon" href="../images/Favicon-01.ico" />
 
         <!-- Meta Information -->
 
@@ -50,25 +50,19 @@
         <script src="https://unpkg.com/animejs@3.0.1/lib/anime.min.js"></script>
         <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
     </head>
-    <body class="is-boxed has-animations">
-        <div class="body-wrap landing main terms">
-            <img
-                class="landing-main-image terms-image"
-                src="../images/landing/terms-of-use-image.png"
-                alt="featlytalk-webrtc-main-image"
-            />
-            <main class="no-overflow">
+    <body>
+        <div>
+            
+            <main>
                 <section class="hero-logo">
-                    <a class="logo" href="/">
-                        <img class="header-logo-image" src="../images/logo.svg" alt="featlytalk-webrtc-logo" />
-                    </a>
+                    
                 </section>
-                <section class="hero">
-                    <div class="hero-inner">
-                        <div class="hero-copy">
+                <section>
+                    <div >
+                        <div>
                             <h1 class="hero-title mt-0 title-terms">Terms of Use</h1>
                             <p class="paragraph-terms">
-                                <b> FeatlyTalk SFU</b> has an integrated
+                                <b> chatspheres SFU</b> has an integrated
                                 <a href="https://mediasoup.org/">mediasoup server</a>. Routing is a multiparty topology,
                                 where each participant sends its media to this server and receives all other's media
                                 from it. Thanks to the SFU architecture, it allows having many users connected in the
@@ -83,18 +77,12 @@
                                 the above-mentioned data.
                             </p>
                         </div>
-                        <!-- <div class="hero-main-image">
-                            <img
-                                class="landing-main-image"
-                                src="../images/landing/terms-of-use-image.png"
-                                alt="featlytalk-webrtc-main-image"
-                            />
-                        </div> -->
+                        <!--
                     </div>
                 </section>
                 <section class="hero-term-info terms-bottom">
-                    <p><a href="/">What is Featly?</a></p>
-                    <span>© 2023 Featly Inc., all rights reserved</span>
+                    <p><a href="/">What is Chatspheres?</a></p>
+                    <span>© 2023 Chatspheres Inc., all rights reserved</span>
                 </section>
             </main>
         </div>
