--- a/public/views/Room.html
+++ b/public/views/Room.html
@@ -130,7 +130,7 @@
 
             <form class="init-input-error-box">
                 <div class="input-box">
-                    <input id="initInputName" required type="text" name="name" class="init-common" onkeyup="checkFields()" />
+                    <input id="initInputName" required type="text" name="name" class="init-common" />
                     <label>Your name</label>
                 </div>
 <div class="input-box"> <!-- Add this div for the description input -->
