--- a/public/views/Room.html
+++ b/public/views/Room.html
@@ -195,7 +195,7 @@ console.log('Room Limit (after parsing):', roomLimit);
 
                 
 
-                <button id="initSubmitButton" type="submit" class="init-common">Create Your Sphere</button>
+                <button id="initSubmitButton" type="submit" class="init-common" disabled>Create Your Sphere</button>
             </form>
 
             <span class="init-limit-text">Up to 10 members. No time limit</span>
