--- a/public/views/Room.html
+++ b/public/views/Room.html
@@ -95,7 +95,7 @@
         <script defer src="https://unpkg.com/@popperjs/core@2"></script>
         <script defer src="https://unpkg.com/tippy.js@6"></script>
     </head>
-    <body onload="initClient()">
+    <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
 
         <div id="initUser" class="init-user">
@@ -143,25 +143,26 @@
     </div>
 
    <script>
-    // Call the checkFields function when the page first loads
-    window.onload = function() {
-        checkFields();
-    }
-
-    function checkFields() {
-        const name = document.getElementById("initInputName").value;
-        const description = document.getElementById("initInputDescription").value;
-        const roomLimit = document.getElementById("initInputRoomLimit").value;
-    
-        // Check if all fields have been filled out
-        if (name && description && roomLimit) {
-            document.getElementById("initSubmitButton").disabled = false;
-        } else {
-            document.getElementById("initSubmitButton").disabled = true;
+        window.onload = function() {
+            initClient(); // Call this first if it's needed for initialization
+            checkFields(); // Then check the fields
         }
-    }
-</script>
 
+        function checkFields() {
+            const name = document.getElementById("initInputName").value;
+            const description = document.getElementById("initInputDescription").value;
+            const roomLimit = document.getElementById("initInputRoomLimit").value;
+        
+            // Check if all fields have been filled out
+            if (name && description && roomLimit) {
+                document.getElementById("initSubmitButton").disabled = false;
+            } else {
+                document.getElementById("initSubmitButton").disabled = true;
+            }
+        }
+
+        // Other scripts go here...
+    </script>
 
 
 
