--- a/public/views/joinurspheres.html
+++ b/public/views/joinurspheres.html
@@ -5,6 +5,9 @@
 <body>
 
   <h1>Available Rooms</h1>
+<h2>keep in mind upon joining the room link it will ask for description and room limit just put anything only if you are joining a room not creating it!</h2>
+
+  
 
   <div id="room-list">
   </div>
