--- a/public/views/landing.html
+++ b/public/views/landing.html
@@ -65,7 +65,7 @@
             <main>
                 <section class="hero-logo">
                     <a class="logo" href="/">
-                        <img class="header-logo-image" src="../images/cooltext441173494358215.gif" alt="featlytalk-webrtc-logo" />
+                        <img class="header-logo-image" src="../images/imageedit_11_9100596704.png" alt="featlytalk-webrtc-logo" />
 
                     </a>
                     <a class="logo" href="/">
