--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -88,7 +88,7 @@ a:hover {
 /* Logo Image Style */
 .header-logo-image {
     width: 400px; /* Set the width */
-    height: 400px; /* Set the height */
+    height: auto; /* Set the height */
 }
 
 
