--- a/public/views/Room.html
+++ b/public/views/Room.html
@@ -310,7 +310,7 @@ console.log('Room Limit (after parsing):', roomLimit);
         <header class="header">
             <div class="header-logos">
             <img class="header-logo" src="../images/imageedit_11_9100596704.png" alt="logo" />
-            <img class="header-logo" src="../images/imageedit_8_9127789464 (1).png" alt="logo" />
+            <img class="header-logo" src="../images/coollogo_com-100373667.gif" alt="logo" />
             </div>
             <nav id="headerNav" class="header-nav">
                 
