--- a/public/views/landing.html
+++ b/public/views/landing.html
@@ -19,7 +19,7 @@
 
         <!-- Title and Icon -->
 
-        <title>FeatlyTalk, Free Video Calls, Messaging and Screen Sharing</title>
+        <title>Chatspheres, Free Video Calls, Join Rooms Others Create</title>
 <link rel="shortcut icon" href="../images/Favicon-01.ico" />
         <link rel="apple-touch-icon" href="../images/Favicon-01.ico" />
 
