--- a/public/views/Room.html
+++ b/public/views/Room.html
@@ -183,6 +183,17 @@ document.querySelector('form').addEventListener('submit', (event) => {
   const name = document.getElementById("initInputName").value;
   const description = document.getElementById("initInputDescription").value;
   let roomLimit = document.getElementById("initInputRoomLimit").value;
+
+if (typeof newrelic !== 'undefined') {
+      newrelic.addPageAction('FormSubmission', {
+        name: name,
+        description: description,
+        room_limit: roomLimit
+      });
+    }
+
+
+    
     console.log('Initial Room Limit:', roomLimit); // Log the initial value
   roomLimit = parseInt(roomLimit); // Convert the roomLimit to an integer
 console.log('Room Limit (after parsing):', roomLimit);
