--- a/public/views/Room.html
+++ b/public/views/Room.html
@@ -149,7 +149,7 @@
         <label>Description of the meeting</label>
     </div>
                 <div class="input-box">
-        <input id="initInputRoomLimit" required type="number" name="room_limit" class="init-common" min="1" onkeyup="checkFields()" />
+        <input id="initInputRoomLimit" required type="text" name="room_limit" class="init-common" min="1" onkeyup="checkFields()" />
         <label>Room Limit</label>
     </div>
 
