--- a/public/views/Room.html
+++ b/public/views/Room.html
@@ -166,19 +166,20 @@
             checkFields(); // Then check the fields
         }
 
-       function checkFields() {
+function checkFields() {
     const name = document.getElementById("initInputName").value;
     const description = document.getElementById("initInputDescription").value;
-    const roomLimit = document.getElementById("initInputRoomLimit").value;
+    const roomLimit = parseInt(document.getElementById("initInputRoomLimit").value); // Parsing to integer
     const tags = document.getElementById("initInputTags").value; // Get tags value
 
-    // Check if all fields have been filled out
-    if (name && description && roomLimit && tags) { // Include tags in the check
+    // Check if all fields have been filled out, and roomLimit is between 1 and 10
+    if (name && description && roomLimit >= 1 && roomLimit <= 10 && tags) { // Include roomLimit validation in the check
         document.getElementById("initSubmitButton").disabled = false;
     } else {
         document.getElementById("initSubmitButton").disabled = true;
     }
 }
+
 
     </script>
 
