--- a/public/views/joinurspheres.html
+++ b/public/views/joinurspheres.html
@@ -1,6 +1,9 @@
 <html>
 <head>
+ 
+  
   <title>JoinUrSpheres Rooms</title>
+   <link rel="stylesheet" href="joinurspheres.css">
   <style>
     /* Optional: Add some CSS to style the tags */
     .tag {
